<resources>
    <string name="app_name">WATPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="userCourseTitle">My Courses</string>
    <string name="conflict">CONFLICT</string>
    <string name="my_courses">My Courses</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">WATPlanner</string>
    <string name="course_detail_view_title_label">Title</string>
    <string name="course_detail_view_description_label">Description</string>
    <string name="course_detail_view_enrolment_label">Enrolment</string>
    <string name="course_detail_view_prerequisites_label">Prerequisites</string>
    <string name="course_detail_view_antirequisites_label">Antirequisites</string>
    <string name="delete_course">Delete</string>
    <string name="searchbar_hint">ex. ECE 452</string>

    <string name="course_detail_enrolment_type">%1$s %2$s</string>
    <string name="course_detail_enrolment_location">Location: %1$s</string>
    <string name="course_detail_enrolment_instructor">Instructor: %1$s</string>
    <string name="course_detail_enrolment_time">Time: %1$s, %2$s - %3$s</string>
    <string name="course_detail_enrolment_capacity">Capacity: %1$s/%2$s</string>

    <string name="calendar_title_home">Your conflict-free schedule</string>
    <string name="calendar_title_hint">Hint: tap on a courses to edit!</string>

</resources>
