<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.peterchu.watplanner.Views.CourseDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/course_detail_view_title_label" />

        <TextView
            android:id="@+id/course_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            tools:context="com.example.peterchu.watplanner.Views.CourseDetailFragment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:id="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/course_detail_view_description_label" />

        <TextView
            android:id="@+id/course_description"
            style="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_alignParentStart="true"
            android:layout_weight="2"
            tools:context="com.example.peterchu.watplanner.Views.CourseDetailFragment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:padding="16dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/course_detail_view_enrolment_label" />

        <TextView
            android:id="@+id/course_enrolment"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="2"
            tools:context="com.example.peterchu.watplanner.Views.CourseDetailFragment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/course_detail_view_prerequisites_label" />

        <TextView
            android:id="@+id/course_prerequisites"
            style="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_alignParentStart="true"
            android:layout_weight="2"
            tools:context="com.example.peterchu.watplanner.Views.CourseDetailFragment" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/course_detail_view_antirequisites_label" />

        <TextView
            android:id="@+id/course_antirequisites"
            style="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_alignParentStart="true"
            android:layout_weight="2"
            tools:context="com.example.peterchu.watplanner.Views.CourseDetailFragment" />
    </LinearLayout>

</RelativeLayout>
